[gd_scene load_steps=9 format=2]

[ext_resource path="res://interfaceScenes/mainScene/startButton.gd" type="Script" id=1]
[ext_resource path="res://assets/arrow.png" type="Texture" id=2]
[ext_resource path="res://interfaceScenes/mainScene/mainScene.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/rectangle.png" type="Texture" id=5]
[ext_resource path="res://interfaceScenes/mainScene/leftArrow.gd" type="Script" id=6]
[ext_resource path="res://interfaceScenes/mainScene/rightArrow.gd" type="Script" id=7]
[ext_resource path="res://assets/start.jpg" type="Texture" id=8]

[node name="mainScene" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 633.0
margin_bottom = 1129.0

[node name="TopPanel" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 450.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 2
custom_constants/separation = 100

[node name="settingButton" type="ColorRect" parent="VBoxContainer/TopPanel"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.568627, 0.498039, 0.784314, 1 )

[node name="Label" type="Label" parent="VBoxContainer/TopPanel/settingButton"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/TopPanel"]
margin_left = 200.0
margin_right = 450.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 0 )
color = Color( 0.784314, 0.823529, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/TopPanel/ColorRect"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "LOGO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="className" type="PanelContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 626.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingButton" type="ColorRect" parent="VBoxContainer/className"]
margin_left = 7.0
margin_top = 7.0
margin_right = 619.0
margin_bottom = 82.0
rect_min_size = Vector2( 100, 75 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.568627, 0.498039, 0.784314, 1 )

[node name="Label" type="Label" parent="VBoxContainer/className/settingButton"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Class  name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 147.0
margin_right = 626.0
margin_bottom = 747.0
rect_min_size = Vector2( 0, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="characterDisplay" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 311.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true

[node name="bioContainer" type="ColorRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 315.0
margin_right = 626.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.568627, 0.498039, 0.784314, 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 751.0
margin_right = 626.0
margin_bottom = 1122.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="leftArrow" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_right = 206.0
margin_bottom = 371.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 6 )

[node name="startButton" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_left = 210.0
margin_right = 416.0
margin_bottom = 371.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 1 )

[node name="rightArrow" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_left = 420.0
margin_right = 626.0
margin_bottom = 371.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 7 )
[connection signal="leftButton" from="VBoxContainer/HBoxContainer3/leftArrow" to="." method="loadIndex"]
[connection signal="startGame" from="VBoxContainer/HBoxContainer3/startButton" to="." method="startGame"]
[connection signal="rightButton" from="VBoxContainer/HBoxContainer3/rightArrow" to="." method="loadIndex"]
